deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: poc-pub-gke
  labels:
    client: internal
    version: 1.0.0
    environtment: dev
  annotations:
      description: Practice Kubernetes Deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: poc-pub
  template:
    metadata:
      name: poc-pub-pod
      labels:
        app: poc-pub
    spec:
      containers:
        - name: poc-pub
          image: asia-south1-docker.pkg.dev/hbl-poc-digfac-anthos-prj/poc-pub-repo/poc-pub-image:v1
          ports:
            - containerPort: 5000
