ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: poc-pub-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: poc-pub-service
          servicePort: 3050
